--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mobiilne Tunniplaani Rakendus by arti95</title>
+    <title>Mobiilne Tunniplaani Rakendus</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,13 +18,14 @@
         <h1>Mobiilne Tunniplaani Rakendus</h1>
         <p>Tunniplaani rakendus, mis võimaldab Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaane vaadata ilma Flash Player&#39;ita mobiiltelefonist</p>
 
-        <p class="view"><a href="https://github.com/arti95/tunniplaan.arti.ee">View the Project on GitHub <small>arti95/tunniplaan.arti.ee</small></a></p>
+        <p class="view"><a href="http://tunniplaan.arti.ee/">Ava töötav tunniplaani rakendus <small>tunniplaan.arti.ee</small></a></p>
+
+        <p class="view"><a href="https://github.com/arti95/tunniplaan.arti.ee">Vaata projekti lähtekoodi GitHub'is <small>arti95/tunniplaan.arti.ee</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/arti95/tunniplaan.arti.ee/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/arti95/tunniplaan.arti.ee/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/arti95/tunniplaan.arti.ee">View On <strong>GitHub</strong></a></li>
+          <li><a href="http://tunniplaan.arti.ee/">Ava töötav <strong>Tunniplaan</strong></a></li>
+          <li><a href="https://github.com/arti95/tunniplaan.arti.ee">Vaata lähtekoodi <strong>GitHub'is</strong></a></li>
         </ul>
       </header>
       <section>
@@ -61,8 +62,10 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/arti95">arti95</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>Selle projekti eest hoolitsevad <br>
+        <a style="padding-left:20px" href="https://www.google.ee/+ArtiZirk">Arti Zirk</a><br>
+        <a style="padding-left:20px" href="https://www.facebook.com/kaili.zirk">Kaili Zirk</a></p>
+        <p><small>Teema autor <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
