--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="octicons/octicons.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,36 +29,33 @@
           <li><a href="https://github.com/arti95/tunniplaan.arti.ee">Vaata lähtekoodi <strong>GitHub'is</strong></a></li>
         </ul>
       </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<section>
+<h3>
+<a id="ja-nii-see-algas" class="anchor" href="#ja-nii-see-algas" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Ja nii see algas <small>(katse nr 1 &mdash; 15. veebruar 2013)</small></h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Idee sai alguse juba mõned aastad tagasi kuid laiskuse tõttu jäi see tunniplaani rakenduse kirjutamine lihtsalt ideeks. 15. veebruar 2013 ma siis lõpuks otsustasin, et rohkem ma seda Flashi rakenduse kasutamis piina ei kannata ning hakkasin esimesi koodiridu kirjutama. Eriti kaugele ma kahjuks selle esimese katsega ei jõudnud ning üsna kiirelt sai see väike skript liigutatud teiste sarnaste ebaõnnestunud ning paremaid aegu ootavate skriptide juurde.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Skript ise on üsna lihtne. Kasutades Pythoni standard teeke tõmmatakse alla kooli tunniplaani nimekirja leht, käiakse see väikese regulaaravaldisega üle ning väljastatakse nimekiri üleval olevatest tunniplaanidest. Nagu all olevast koodis on võimalik näha siis sellega skripti töö piirdub.</p>
+<p><a href="http://i.imgur.com/qnal8Zy.png"><img src="http://i.imgur.com/qnal8Zy.png" title="Katse nr 1" /></a></p>
+<p><script src="https://gist.github.com/arti95/88468101c54745c85e90.js"></script></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="uus-algus" class="anchor" href="#uus-algus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Uus algus <small>(katse nr 2 &mdash; 23. aprill 2014)</small></h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>2014-nda aasta aprillikuu lõpupoole otsustasin selle mobiilse tunniplaani rakenduse projekti uuesti ellu äratada ning ka lõpuni siis toimunud võrgurakendused kooli tundide raames. </p>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Rather Drive Stick?</h3>
 
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Authors and Contributors</h3>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
