--- a/index.html
+++ b/index.html
@@ -31,6 +31,23 @@
       </header>
 <section>
 <h3>
+<a id="reklaam-ja-väikesed kujunduse-muutused" class="anchor" href="#reklaam-ja-väikesed kujunduse-muutused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Reklaam ja väikesed kujunduse muutused <small>(8. jaanuar 2015)</small></h3>
+<p>Täna sai siis üles pandud väikesed lipikud koolis stendide peale. Me oleks
+pidanud seda juba tegelikuses tükkaega tagasi tegema aga noh parem hilja kui
+üldse mitte kunagi.</p>
+<p><img src="http://i.imgur.com/p6312K7l.jpg" alt="Kuulutus gümnaasiumi stendi peal" /></p>
+<p><img src="http://i.imgur.com/2frKLual.jpg" alt="Kuulutus õpekeskuse stendi peal" /></p>
+<p>Kujunduse poole pealt on muutsin natuke teksti suuruseid ning mängisin ka natuke
+CSS <code>@media</code> query asjadega ning tulemus on kohe palju parem</p>
+<p>ülemine pilt on vana kujundus ning alumine on uue kujundusega koduleht</p>
+<p><img src="http://i.imgur.com/NGlzvKy.png" alt="Vana avaleht" /></p>
+<p><img src="http://i.imgur.com/o9A9ki2.png" alt="Uus avaleht" /></p>
+<p>samamoodi väikesed muudatused tunniplaani kuvamis lehel</p>
+<p><img src="http://i.imgur.com/ezRywuh.png" alt="Vana tunniplaani kuvaja" /></p>
+<p><img src="http://i.imgur.com/mXe1SCE.png" alt="Uus tunniplaani kuvaja" /></p>
+
+<hr>
+<h3>
 <a id="uus-algus" class="anchor" href="#uus-algus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Uus algus <small>(katse nr 2 &mdash; 23. aprill 2014)</small></h3>
 <p>2014-nda aasta aprillikuu lõpupoole otsustasin selle mobiilse tunniplaani
 rakenduse projekti uuesti ellu äratada ning ka lõpuni viia siis toimunud
