tagasiside küsitluse postitus

--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
       </header>
 <section>
 <h3>
-<a id="reklaam-ja-väikesed kujunduse-muutused" class="anchor" href="#reklaam-ja-väikesed kujunduse-muutused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Reklaam ja väikesed kujunduse muutused <small>(8. jaanuar 2015)</small></h3>
+<a id="tagasiside-küsitlus" class="anchor" href="#tagasiside-küsitlus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Tagasiside küsitlus <small>(11. jaanuar 2015)</small></h3>
+<p>Täna sai üles pandud väikene tagasiside küsitlus, et teada saada mida kasutajad
+arvavad sellest meie tunniplaani rakendusest ning mida muuta ja paremaks teha.</p>
+<div id="fb-root"></div> <script>(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//connect.facebook.net/et_EE/all.js#xfbml=1"; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-post" style="overflow-x: auto; max-width: 100%;" data-href="https://www.facebook.com/kaili.zirk/posts/737607349650856" data-width="500"><div class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/kaili.zirk/posts/737607349650856">Postita</a> by <a href="https://www.facebook.com/kaili.zirk">Kaili Zirk</a>.</div></div>
+<p>Küsitlus asub <a href="http://goo.gl/forms/Q3XOiBA3Mb">siin</a></p>
+
+<hr>
+<h3>
+<a id="reklaam-ja-väikesed-kujunduse-muutused" class="anchor" href="#reklaam-ja-väikesed-kujunduse-muutused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Reklaam ja väikesed kujunduse muutused <small>(8. jaanuar 2015)</small></h3>
 <p>Täna sai siis üles pandud väikesed lipikud koolis stendide peale. Me oleks
 pidanud seda juba tegelikuses tükkaega tagasi tegema aga noh parem hilja kui
 üldse mitte kunagi.</p>
