Tagasiside küsitluse tulemused ja muud väikesed muudatused

--- a/index.html
+++ b/index.html
@@ -31,6 +31,57 @@
       </header>
 <section>
 <h3>
+<a id="tagasiside-küsitluse-tulemused" class="anchor" href="#tagasiside-küsitluse-tulemused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Tagasiside küsitluse tulemused <small>(19. jaanuar 2015)</small></h3>
+<p>Nädal on möödas küsitluse ülespanekust, nii et paras aeg on vaadata tulemusi</p>
+<h4>Kui tihti kasutad/kasutaksid mobiilset tunniplaani rakendust?</h4>
+<p>56% vastanutest kasutab tunniplaani rakendust vähemalt kord nädalas mis on
+minuarvates päris hea tulemus</p>
+<p><img src="http://i.imgur.com/BVPwr7S.png" alt="chart" /></p>
+<table style="width:100%">
+<tr>
+  <th>Küsimus</th><th>Vastuseid</th><th>Protsent</th>
+</tr>
+<tr>
+  <td>Pole kunagi kasutanud</td><td>6</td><td>26%</td>
+</tr>
+<tr>
+  <td>Kord kuus või õppeveerandi alguses</td><td>0</td><td>0%</td>
+</tr>
+<tr>
+  <td>Kord nädalas</td><td>4</td><td>17%</td>
+</tr>
+<tr>
+  <td>Paar korda nädalas</td><td>4</td><td>17%</td>
+</tr>
+<tr>
+  <td>Igapäevaselt</td><td>5</td><td>22%</td>
+</tr>
+</table>
+<h4>Mida arvad tunniplaani rakendusest? <br>
+<small>Mida võiks muuta, mida paremaks teha, mida lisada või eemaldada.</small></h4>
+<p>Selle küsimusega tuli terve posu huvitavaid vastuseid millest mõned olid sellised:</p>
+<blockquote>
+<p>Telefonis mugav kasutada. Meeldib, et nii õppegrupid kui õpetajad on tähestikulises järjekorras.</p>
+</blockquote>
+<blockquote>
+<p>Väga asjalik, sest veerandi alguses oli mure, et telefoniga ei saanud rakendust avada.</p>
+</blockquote>
+<blockquote>
+<p>Just avastasin selle rakenduse ja kindlasti hakkan kasutama!</p>
+</blockquote>
+<blockquote>
+<p>Huehuehueheee... Kõik on bueno! :D Jätkake samas vaimus!!</p>
+</blockquote>
+<blockquote>
+<p>Väga mugav ja praktiline. Toimib. Kindlasti lisage kooli kodulehe ka!</p>
+</blockquote>
+<blockquote>
+<p>Võiks teha vmg appi nii androidile kui ka apple-le, kus saaks vmg uudistega kursis olla, pilte vaadata jne. Nagu vmg koduleht</p>
+</blockquote>
+<p>Kõigi vastustega saab tutvuda <a href="https://docs.google.com/forms/d/1dUzYZ11pWdNM4GiKo_4m3NPWWcwNYvedWq6QJteAQQc/viewanalytics">siin</a></p>
+
+<hr>
+<h3>
 <a id="tagasiside-küsitlus" class="anchor" href="#tagasiside-küsitlus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Tagasiside küsitlus <small>(11. jaanuar 2015)</small></h3>
 <p>Täna sai üles pandud väikene tagasiside küsitlus, et teada saada mida kasutajad
 arvavad sellest meie tunniplaani rakendusest ning mida muuta ja paremaks teha.</p>
@@ -48,12 +99,21 @@ pidanud seda juba tegelikuses tükkaega tagasi tegema aga noh parem hilja kui
 <p><img src="http://i.imgur.com/2frKLual.jpg" alt="Kuulutus õpekeskuse stendi peal" /></p>
 <p>Kujunduse poole pealt on muutsin natuke teksti suuruseid ning mängisin ka natuke
 CSS <code>@media</code> query asjadega ning tulemus on kohe palju parem</p>
-<p>ülemine pilt on vana kujundus ning alumine on uue kujundusega koduleht</p>
-<p><img src="http://i.imgur.com/NGlzvKy.png" alt="Vana avaleht" /></p>
-<p><img src="http://i.imgur.com/o9A9ki2.png" alt="Uus avaleht" /></p>
-<p>samamoodi väikesed muudatused tunniplaani kuvamis lehel</p>
-<p><img src="http://i.imgur.com/ezRywuh.png" alt="Vana tunniplaani kuvaja" /></p>
-<p><img src="http://i.imgur.com/mXe1SCE.png" alt="Uus tunniplaani kuvaja" /></p>
+<p>Vasak pilt on vana kujundus ning parem on uue kujundusega koduleht</p>
+<p><img src="http://i.imgur.com/NGlzvKy.png"
+alt="Vana kujudnus"
+style="display:inline; width: 49%;">
+<img src="http://i.imgur.com/o9A9ki2.png"
+alt="Uus kujudnus"
+style="display:inline; float: right; width: 49%;"></p>
+<p>Samamoodi väikesed muudatused tunniplaani kuvamis lehel</p>
+<p><img src="http://i.imgur.com/ezRywuh.png" 
+alt="Vana kujudnus"
+style="display:inline; width: 49%;">
+<img src="http://i.imgur.com/mXe1SCE.png" 
+alt="Uus kujudnus"
+style="display:inline; float: right; width: 49%;">
+<br></p>
 
 <hr>
 <h3>
