tagasiside küsitluse tulemused kirjavea parandused

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@ esitusega kell 12:00.</p>
 <hr>
 <h3>
 <a id="tagasiside-küsitluse-tulemused" class="anchor" href="#tagasiside-küsitluse-tulemused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Tagasiside küsitluse tulemused <small>(19. jaanuar 2015)</small></h3>
-<p>Nädal on möödas küsitluse ülespanekust, nii et on paras aeg vaadata tulemusi</p>
+<p>Nädal on möödas küsitluse ülespanekust, nii, et on paras aeg vaadata tulemusi.</p>
 <h4>Kui tihti kasutad/kasutaksid mobiilset tunniplaani rakendust?</h4>
 <p>56% vastanutest kasutab tunniplaani rakendust vähemalt kord nädalas, mis on
-minuarvates päris hea tulemus</p>
+minu arvates päris hea tulemus.</p>
 <p><img src="http://i.imgur.com/BVPwr7S.png" alt="chart" /></p>
 <table style="width:100%">
 <tr>
@@ -90,7 +90,7 @@ minuarvates päris hea tulemus</p>
 <blockquote>
 <p>Võiks teha vmg appi nii androidile kui ka apple-le, kus saaks vmg uudistega kursis olla, pilte vaadata jne. Nagu vmg koduleht</p>
 </blockquote>
-<p>Kõigi vastustega saab tutvuda <a href="https://docs.google.com/forms/d/1dUzYZ11pWdNM4GiKo_4m3NPWWcwNYvedWq6QJteAQQc/viewanalytics">siin</a></p>
+<p>Kõigi vastustega saab tutvuda <a href="https://docs.google.com/forms/d/1dUzYZ11pWdNM4GiKo_4m3NPWWcwNYvedWq6QJteAQQc/viewanalytics">siin</a>.</p>
 
 <hr>
 <h3>
