kujunduse postituse kirjavea parandus

--- a/index.html
+++ b/index.html
@@ -105,20 +105,21 @@ arvavad meie tunniplaani rakendusest ning mida muuta ja paremaks teha.</p>
 <h3>
 <a id="reklaam-ja-väikesed-kujunduse-muutused" class="anchor" href="#reklaam-ja-väikesed-kujunduse-muutused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Reklaam ja väikesed kujunduse muutused <small>(8. jaanuar 2015)</small></h3>
 <p>Täna sai siis üles pandud väikesed lipikud koolis stendide peale. Me oleks
-pidanud seda juba tükk aega tagasi tegema aga parem hilja kui
+pidanud seda juba tükk aega tagasi tegema, aga parem hilja kui
 üldse mitte kunagi.</p>
 <p><img src="http://i.imgur.com/p6312K7l.jpg" alt="Kuulutus gümnaasiumi stendi peal" /></p>
 <p><img src="http://i.imgur.com/2frKLual.jpg" alt="Kuulutus õpekeskuse stendi peal" /></p>
-<p>Kujunduse poole pealt on muutsin natuke teksti suuruseid ning mängisin ka natuke
-CSS <code>@media</code> query asjadega ning tulemus on kohe palju parem</p>
-<p>Vasak pilt on vana kujundus ning parem on uue kujundusega koduleht</p>
+<p>Kujunduse poole pealt muutsin natuke teksti suuruseid ning mängisin ka natuke
+CSS <code>@media</code> query asjadega ja tulemus on kohe palju parem.</p>
+<p>Vasakpoolne pilt on vanast kujundusest ning parempoolne on uue kujundusega
+kodulehest.</p>
 <p><img src="http://i.imgur.com/NGlzvKy.png"
 alt="Vana kujudnus"
 style="display:inline; width: 49%;">
 <img src="http://i.imgur.com/o9A9ki2.png"
 alt="Uus kujudnus"
 style="display:inline; float: right; width: 49%;"></p>
-<p>Samamoodi väikesed muudatused tunniplaani kuvamis lehel</p>
+<p>Sammuti sai ka muudetud tunniplaani kuvamis lehte.</p>
 <p><img src="http://i.imgur.com/ezRywuh.png" 
 alt="Vana kujudnus"
 style="display:inline; width: 49%;">
