--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ telefonist pildi saatmiseks läpakasse.</p>
 <hr>
 <h3>
 <a id="progetiiger-registreerumine" class="anchor" href="#progetiiger-registreerumine" aria-hidden="true"><span class="octicon octicon-link"></span> </a>ProgeTiiger Registreerumine <small>(24. september 2014)</small></h3>
-<p>Suure hurraaga sai siis mind, Artit, ja mu õde ,Kailit, ära registreeritud ProgeTiigri
-&quot;Tuleviku õpperuum 2050&quot; võistluse maakondlikku vooru mis toimub 15. oktoober Sõmerus.
-Meil on küll olemas töötav rakendus, mis on põhimõtteliselt lihtsalt veebi leht mida on
+<p>Suure hurraaga sai siis mind, Artit, ja mu õde, Kailit, ära registreeritud ProgeTiigri
+&quot;Tuleviku õpperuum 2050&quot; võistluse maakondlikku vooru, mis toimub 15. oktoober Sõmerus.
+Meil on küll olemas töötav rakendus, mis on põhimõtteliselt lihtsalt veebileht, mida on
 võimalik nutiseadmes vaadata, aga arengumappi ja muud sellist meil pole,
 eks näeb mis saab :)</p>
 
