--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ esitatud, mis meil Kailiga eriti hästi välja ei tulnud, kuna me esitlust varem
 ei harjutanud.</p>
 <p>Finaal ise toimub 24. jaanuaril Tallinna Lauluväljakul kell 11:00, meie esineme oma
 esitusega kell 12:00.</p>
-<p>facebooki ürituse link <a href="https://www.facebook.com/events/493551564119105">https://www.facebook.com/events/493551564119105</a>.</p>
+<p>Facebooki ürituse link <a href="https://www.facebook.com/events/493551564119105">https://www.facebook.com/events/493551564119105</a>.</p>
 
 <hr>
 <h3>
@@ -156,15 +156,15 @@ eks näeb mis saab :)</p>
 <p>Täna sai mobiilse tunniplaani rakendusele juurde lisatud <a href="http://www.google.com/analytics/">Google Analytics</a>
 tugi, et oleks parem ülevaade mis seadmetega meie rakendust kasutatakse ja ka
 paljud üldse meie tunniplaani rakendust kasutavad.</p>
-<p>Ma oleks pidanud Analytics'i juba alguses tegelikult lisama aga õppeaasta
-algus on ka hea aeg selle kasutamise alustamiseks</p>
+<p>Ma oleks pidanud Analytics'i juba alguses tegelikult lisama, aga õppeaasta
+algus on ka hea aeg selle kasutamise alustamiseks.</p>
 <p><a href="http://i.imgur.com/aB4kuXU.png"><img src="http://i.imgur.com/aB4kuXUl.png" title="Google Analytics" /></a></p>
 
 <hr>
 <h3>
 <a id="korralik-veeb" class="anchor" href="#korralik-veeb" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Korralik Veeb <small>(mai 2014)</small></h3>
-<p>Mais sai alustatud korraliku veebiliidese kirjutamisega</p>
-<p>Võrreldes vana veebiga on uus ikka kõvasti parem</p>
+<p>Mais sai alustatud korraliku veebiliidese kirjutamisega.</p>
+<p>Võrreldes vana veebiga on uus ikka kõvasti parem.</p>
 <p><img src="http://i.imgur.com/R4LiY4C.png" alt="Pealeht arvutis" /></p>
 <p><img src="http://i.imgur.com/bRJjdcV.png" alt="Pealeht nutiseadmes" /></p>
 <p><img src="http://i.imgur.com/6TkRCAD.png" alt="Tunniplaan nutiseadmes" /></p>
@@ -173,34 +173,42 @@ algus on ka hea aeg selle kasutamise alustamiseks</p>
 <h3>
 <a id="uus-algus" class="anchor" href="#uus-algus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Uus algus <small>(katse nr 2 &mdash; 23. aprill 2014)</small></h3>
 <p>2014-nda aasta aprillikuu lõpupoole otsustasin selle mobiilse tunniplaani
-rakenduse projekti uuesti ellu äratada ning ka lõpuni viia siis toimunud
-võrgurakendused kooli tundide raames.</p>
+rakenduse projekti uuesti ellu äratada ning ka lõpuni viia, kasutades selleks
+võrgurakenduse eriala tunde.</p>
 <p>Kuna ma tollel hetkel enda esimest katset enam üles ei leidnud, otsustasin
-uuesti nullist alustada.</p>
-<p>Algust sai tehtud <code>vmok_tunniplaan.py</code> failiga mille eesmärk on Väike-Maarja
-Õppekeskuse kodulehelt üles otsida hetkel üleval olevad tunniplaanid, need alla laadida ja <code>.png</code> piltideks teisendada.</p>
-<p>Eesmärk sai jaotatud mitmeks väiksemaks probleemiks, et neid kergem lahendada oleks</p>
+nullist alustada.</p>
+<p>Algust sai tehtud <code>vmok_tunniplaan.py</code> failiga, mille eesmärk on Väike-Maarja
+Õppekeskuse kodulehelt üles otsida hetkel ülevalolevad tunniplaanid, need alla laadida ja <code>.png</code> piltideks teisendada.</p>
+<p>Töö sai jaotatud mitmeks väiksemaks lahendamistvajavaks probleemiks:</p>
 <ol>
-<li>HTML koodist tunniplaanide nimekirja välja lugemine</li>
-<li>Tunniplaani allalaadimine</li>
-<li>Flash <code>.swf</code> failide lugemine ja nendest <code>.png</code> piltide loomine</li>
-<li>Piltide salvestamine loogilisse kaustapuuse.</li>
+<li>HTML koodist tunniplaanide nimekirja väljalugemine;</li>
+<li>tunniplaanide allalaadimine;</li>
+<li>Flash <code>.swf</code> failide lugemine ja nendest <code>.png</code> piltide loomine;</li>
+<li>piltide salvestamine loogilisse kaustapuuse.</li>
 </ol>
-<p>Esimene probleem on õnneks üsna kergelt lahendatav kuna programmeerimiskeeles
+<p>Esimene probleem on õnneks üsna kergelt lahendatav, kuna programmeerimiskeeles
 <a href="https://www.python.org/" title="Python programeerimiskeele koduleht">Python</a>, mida ma otsustasin kasutada terve selle projekti jaoks,
-on olemas üks teek nimega <a href="http://www.crummy.com/software/BeautifulSoup/" title="Beautiful Soup Python teegi koduleht">Beautiful Soup</a> millega on üsna lihtne
-HTML koodist ennast läbi närida. Lisaks sai ka kasutatud <a href="http://docs.python-requests.org/" title="Requests: HTTP for Humans">requests</a> teeki
-mis muudab HTTP käskude saatmise serverile palju palju kergemaks.</p>
+on olemas üks teek, nimega <a href="http://www.crummy.com/software/BeautifulSoup/" title="Beautiful Soup Python teegi koduleht">Beautiful Soup</a>, millega on üsna lihtne
+HTML koodist ennast läbi närida. Lisaks sai ka kasutatud <a href="http://docs.python-requests.org/" title="Requests: HTTP for Humans">requests</a> teeki,
+mis muudab HTTP käskude saatmise serverile palju kergemaks.</p>
 <script src="https://gist.github.com/arti95/6fb56a63ad90ae349725.js"></script>
 <p>...</p>
-<p>Ja lõpptulemus kõige selle tagajärel oli selline väga lihtne ja kole veebileht.</p>
+<p>Ja lõpptulemus kõige selle tagajärel oli selline — lihtne ja kole veebileht.</p>
 <p><img src="http://i.imgur.com/PdgG9wd.png" alt="esimene veeb" /></p>
 
 <hr>
 <h3>
 <a id="ja-nii-see-algas" class="anchor" href="#ja-nii-see-algas" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Ja nii see algas <small>(katse nr 1 &mdash; 15. veebruar 2013)</small></h3>
-<p>Idee sai alguse juba mõned aastad tagasi, kuid laiskuse tõttu jäi see tunniplaani rakenduse kirjutamine lihtsalt ideeks. 15. veebruar 2013 ma siis lõpuks otsustasin, et rohkem ma seda Flashi rakenduse kasutamis piina ei kannata ning hakkasin esimesi koodiridu kirjutama. Eriti kaugele ma kahjuks selle esimese katsega ei jõudnud ning üsna kiirelt sai see väike skript liigutatud teiste sarnaste ebaõnnestunud ning paremaid aegu ootavate skriptide juurde.</p>
-<p>Skript ise on üsna lihtne. Kasutades Pythoni standard teeke tõmmatakse alla kooli tunniplaani nimekirja leht, käiakse see väikese regulaaravaldisega üle ning väljastatakse nimekiri üleval olevatest tunniplaanidest. Nagu all olevast koodis on võimalik näha siis sellega skripti töö piirdub.</p>
+<p>Idee sai alguse juba mõned aastad tagasi, kuid laiskuse tõttu jäi see tunniplaani
+rakenduse kirjutamine lihtsalt ideeks. 15. veebruar 2013 ma siis lõpuks
+otsustasin, et rohkem ma seda Flashi rakenduse kasutamis piina ei kannata ning
+hakkasin esimesi koodiridu kirjutama. Eriti kaugele ma kahjuks selle esimese
+katsega ei jõudnud ning üsna kiirelt sai see väike skript liigutatud teiste
+sarnaste ebaõnnestunud ning paremaid aegu ootavate skriptide juurde.</p>
+<p>Skript ise on üsna lihtne. Kasutades Pythoni standardteeke tõmmatakse alla
+kooli tunniplaanidenimekirja leht, käiakse see väikese regulaaravaldisega üle
+ning väljastatakse nimekiri hetkel üleval olevatest tunniplaanidest. Nagu all olevast
+koodis on võimalik näha, siis sellega skripti töö piirdubki.</p>
 <p><a href="http://i.imgur.com/qnal8Zy.png"><img src="http://i.imgur.com/qnal8Zy.png" title="Katse nr 1" /></a></p>
 <script src="https://gist.github.com/arti95/88468101c54745c85e90.js"></script>
 
