--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <h3>
 <a id="progetiigri-esitlus" class="anchor" href="#progetiigri-esitlus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>ProgeTiigri esitlus finaaliks <small>(19. jaanuar 2015)</small></h3>
 <p>Täna on ProgeTiigri Finaali esitluse saatmise tähtpäev.
-Kõik, kes on huvitatud, võivad esitlust vaadata aadressil <a href="http://tp.arti.ee/esitlus">tp.arti.ee/esitlus</a></p>
+Kõik, kes on huvitatud, võivad esitlust vaadata aadressil <a href="http://tp.arti.ee/esitlus">tp.arti.ee/esitlus</a>.</p>
 <p>Selle esitluse varasemat versiooni sai ka 15.jaanuar neljapäeval 11. klassile
 esitatud, mis meil Kailiga eriti hästi välja ei tulnud, kuna me esitlust varem läbi
 ei harjutanud.</p>
