--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1>Mobiilne Tunniplaani Rakendus</h1>
-        <p>Tunniplaani rakendus, mis võimaldab Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaane vaadata ilma Flash Player&#39;ita mobiiltelefonist</p>
+        <p>Tunniplaani rakendus, mis võimaldab Väike-Maarja Õppekeskuse ja Gümnaasiumi tunniplaane vaadata nutiseadmest ilma Flash Player&#39;ita</p>
 
         <p class="view"><a href="http://tunniplaan.arti.ee/">Ava töötav tunniplaani rakendus <small>tunniplaan.arti.ee</small></a></p>
 
