avab teema autori uuel lehel

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ koodis on võimalik näha, siis sellega skripti töö piirdubki.</p>
         <p>Selle projekti eest hoolitsevad <br>
         <a style="padding-left:20px" href="https://www.google.ee/+ArtiZirk">Arti Zirk</a><br>
         <a style="padding-left:20px" href="https://www.facebook.com/kaili.zirk">Kaili Zirk</a></p>
-        <p><small>Teema autor <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Teema autor <a href="https://github.com/orderedlist" target="_blank">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
