veel kirjavigade parandusi

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ pidanud seda juba tükk aega tagasi tegema, aga parem hilja kui
 <p><img src="http://i.imgur.com/p6312K7l.jpg" alt="Kuulutus gümnaasiumi stendi peal" /></p>
 <p><img src="http://i.imgur.com/2frKLual.jpg" alt="Kuulutus õpekeskuse stendi peal" /></p>
 <p>Kujunduse poole pealt muutsin natuke teksti suuruseid ning mängisin ka natuke
-CSS <code>@media</code> query asjadega ja tulemus on kohe palju parem.</p>
+CSS <code>@media</code> query asjadega ja tulemus sai kohe palju parem.</p>
 <p>Vasakpoolne pilt on vanast kujundusest ning parempoolne on uue kujundusega
 kodulehest.</p>
 <p><img src="http://i.imgur.com/NGlzvKy.png"
