veel üks kirjavea parandus

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ esitusega kell 12:00.</p>
 <hr>
 <h3>
 <a id="tagasiside-küsitluse-tulemused" class="anchor" href="#tagasiside-küsitluse-tulemused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Tagasiside küsitluse tulemused <small>(19. jaanuar 2015)</small></h3>
-<p>Nädal on möödas küsitluse ülespanekust, nii, et on paras aeg vaadata tulemusi.</p>
+<p>Nädal on möödas küsitluse ülespanekust, seega on paras aeg vaadata tulemusi.</p>
 <h4>Kui tihti kasutad/kasutaksid mobiilset tunniplaani rakendust?</h4>
 <p>56% vastanutest kasutab tunniplaani rakendust vähemalt kord nädalas, mis on
 minu arvates päris hea tulemus.</p>
