väikesed tunniplaani lehe täiustused

--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
       </header>
 <section>
 <h3>
+<a id="vaikesed-tunniplaani-lehe-taiustused" class="anchor" href="#vaikesed-tunniplaani-lehe-taiustused" aria-hidden="true"><span class="octicon octicon-link"></span> </a>Väikesed tunniplaani lehe täiustused <small>(9. märts 2015)</small></h3>
+<p>Täna sai tehtud väikesed täiustused tunniplaani lehele</p>
+<ol>
+<li><p>Eemaldasin tagsidide küsitluse lingi pealehelt kuna keegi pole sinna ühtegi
+vastust juba üle kahe kuu kirjutanud.</p></li>
+<li><p>Tunniplaanide aadressidelt eemaldasin <code>.png</code> lõpu mis ajas Google Chrome
+Androidi peal natuke segadusse. Põhimõtteliselt Chrome Androidi peal üritab
+kõiki linke mis lõppevad <code>.png</code>, <code>.jpg</code> või mõne muu pildi faili laiendiga
+avada neid Android Galery või mõne muu rakendusega mis oskab pildi faile avada.</p></li>
+<li><p>Tunniplaani peale vajutades või klikkides ei avata enam tunniplaani
+pildi faili ning lisasin selle asemel lehe lõppu väikese lae alla nupu mis
+võimaldab palju mugavamalt tunniplaani endale telefoni või arvut alla laadida.</p></li>
+<li><p>Lehekülje pealkiri muutub nüüd vastavalt sellele mis lehe peal sa hetkel oled
+<img src="http://i.imgur.com/wzwXTBZ.png" alt="Imgur" />
+<img src="http://i.imgur.com/p1DecXG.png" alt="Imgur" />
+<img src="http://i.imgur.com/dv2EQj7.png" alt="Imgur" /></p></li>
+</ol>
+
+<hr>
+<h3>
 <a id="progetiigri-esitlus" class="anchor" href="#progetiigri-esitlus" aria-hidden="true"><span class="octicon octicon-link"></span> </a>ProgeTiigri esitlus finaaliks <small>(19. jaanuar 2015)</small></h3>
 <p>Täna on ProgeTiigri Finaali esitluse saatmise tähtpäev.
 Kõik, kes on huvitatud, võivad esitlust vaadata aadressil <a href="http://tp.arti.ee/esitlus">tp.arti.ee/esitlus</a>.</p>
